--- a/app.json
+++ b/app.json
@@ -9,11 +9,12 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "splash": {
-      "image": "./src/assets/images/splash-icon.png",
+      "image": "./src/assets/images/icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
     "ios": {
+      "icon": "./src/assets/images/icon.png",
       "supportsTablet": true,
       "bundleIdentifier": "com.deangelis84.larafront",
       "infoPlist": {
